# artefact-ai-assistant

./: .env.example  .gitignore  README.md  app.py  chainlit.md  pyproject.toml
src/artefact_ai_assistant/: __init__.py  agent.py  cli.py
src/artefact_ai_assistant/tools/: calculator.py  currency.py
tests/: test_calculator.py  test_currency.py
